2013-11-20  Richard Earnshaw  <rearnsha@arm.com>

	PR rtl-optimization/54300
	* regcprop.c (copyprop_hardreg_forward_1): Ensure any unused
	outputs in a single-set are killed from the value chains.

2013-11-20  Ilya Enkovich  <ilya.enkovich@intel.com>

	* cgraph.h (varpool_node): Add need_bounds_init field.
	* lto-cgraph.c (lto_output_varpool_node): Output
	need_bounds_init value.
	(input_varpool_node): Read need_bounds_init value.
	* varpool.c (dump_varpool_node): Dump need_bounds_init field.

2013-11-20  Jan Hubicka  <jh@suse.cz>

	* opts.c (finish_options): Imply -ffat-lto-objects with -fno-use-linker-plugin.
	* common.opt (fuse-linker-plugin): Add var.

2013-11-20  Ilya Enkovich  <ilya.enkovich@intel.com>

	* dbxout.c (dbxout_type): Ignore POINTER_BOUNDS_TYPE.
	* dwarf2out.c (gen_subprogram_die): Ignore bound args.
	(gen_type_die_with_usage): Skip pointer bounds.
	(dwarf2out_global_decl): Likewise.

2013-11-20  James Greenhalgh  <james.greenhalgh@arm.com>

	* config/aarch64/aarch64.md: Remove "mode" and "mode2" attributes
	from all insns.

2013-11-20  Yuri Rumyantsev  <ysrumyan@gmail.com>

	PR target/57756
	* config/i386/i386.c (ix86_option_override_internal): Add missed
	argument prefix for 'ix86_fpmath'.
	* config/i386/ssemath.h: Add missed definition of
	TARGET_FPMATH_DEFAULT_P macros.

2013-11-20  Kenneth Zadeck  <zadeck@naturalbridge.com>
	    Mike Stump  <mikestump@comcast.net>
	    Richard Sandiford  <rdsandiford@googlemail.com>

	* alias.c (ao_ref_from_mem): Use tree_to_shwi and tree_to_uhwi
	instead of TREE_INT_CST_LOW, in cases where there is a protecting
	tree_fits_shwi_p or tree_fits_uhwi_p.
	* builtins.c (fold_builtin_powi): Likewise.
	* config/epiphany/epiphany.c (epiphany_special_round_type_align):
	Likewise.
	* dbxout.c (dbxout_symbol): Likewise.
	* expr.c (expand_expr_real_1): Likewise.
	* fold-const.c (fold_single_bit_test, fold_plusminus_mult_expr)
	(fold_binary_loc): Likewise.
	* gimple-fold.c (fold_const_aggregate_ref_1): Likewise.